// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zosmf utils Should create a session object when tokenValue and tokenType are present 1`] = `
Object {
  "basePath": "fake",
  "hostname": "fake",
  "password": undefined,
  "port": "fake",
  "protocol": "https",
  "rejectUnauthorized": false,
  "secureProtocol": "SSLv23_method",
  "strictSSL": true,
  "tokenType": "fake",
  "tokenValue": "fake",
  "type": "token",
  "user": undefined,
}
`;

exports[`zosmf utils should create a basic session object 1`] = `
Object {
  "base64EncodedAuth": "ZmFrZTpmYWtl",
  "basePath": "",
  "hostname": "fake",
  "password": "fake",
  "port": "fake",
  "protocol": "https",
  "rejectUnauthorized": "fake",
  "secureProtocol": "SSLv23_method",
  "strictSSL": true,
  "type": "basic",
  "user": "fake",
}
`;
